# ner-annotator

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  LICENSE  PRIVACY-POLICY.md  README.md  a  docker-compose.yml  index.html  jsoned_data.txt  package-lock.json  package.json  tags_2.json  vite.config.mjs  vitest.config.js  vue.config.js
.github/: FUNDING.yml
.github/workflows/: build-and-publish.yml  test-build.yml  test-prs.yml
annotator/: requirements.txt  server.Dockerfile  server.py
data/: json_format_for_annotating.json  myJSON(1).json  updated_json_format.json
docs/: index.html
docs/assets/: index-Bz3un_3O.js  index-DYNLFKBf.js  index-_jiBOyD3.css  index-eh-puVY4.css
docs/css/: app.1f073c57.css  app.31ab2840.css  app.67664d18.css  app.7376b7b4.css  app.7539c422.css  app.822cc925.css  app.8dd0bc35.css  app.de36d126.css  chunk-vendors.2752329b.css  chunk-vendors.f054464f.css
docs/js/: app.1a1b43ec.js  app.1a1b43ec.js.map  app.523bc2e4.js  app.523bc2e4.js.map  app.53b9b561.js  app.53b9b561.js.map  app.56bf718a.js  app.56bf718a.js.map  app.704735a2.js  app.704735a2.js.map  app.75ea0650.js  app.75ea0650.js.map  app.993a4497.js  app.993a4497.js.map  app.a1adf95c.js  app.a1adf95c.js.map  app.ba6a5901.js  app.ba6a5901.js.map  app.c339959d.js  (+27 more)
documentation/: info.md
src/: App.vue  main.js  quasar-user-options.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: store.spec.js
ui/: Dockerfile  package.json  ui.Dockerfile  vue.config.js
(+46 files in other folders)
